Added two new quizzes , one piece and Marvel quizez.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
             <div class="col-12">
                 <div id="main-game">
                     <div class="#"></div>
-                       <h1>Fast Food Trivia!</h1>
+                       <h1>Trivia!</h1>
                        <div class="card-body" id="game-area">
-                            <button type="button" id="start-button"class="btn btn-secondary btn-lg">Start</button>
+                           <div id='selection-header'>Select a quiz to begin!</div>
+                           <div id='start-buttons'>
+                            <button type="button" id="start-button-fastFood"class="btn btn-secondary btn-lg">Fast Food Trivia</button>
+                            <button type="button" id="start-button-onePiece"class="btn btn-secondary btn-lg">One Piece Trivia</button>
+                            <button type="button" id="start-button-Marvel"class="btn btn-secondary btn-lg">Marvel Trivia</button>
+                        </div>
                         </div>
                     </div>
 
